crates/carta/tests/snapshots/golden_writer__markdown_mmd__table__table-colspan.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<table>
<tbody>
<tr>
<td colspan="2">wide</td>
</tr>
<tr>
<td>a</td>
<td>b</td>
</tr>
</tbody>
</table>
