crates/carta/tests/snapshots/golden_writer__markdown_mmd__table__table-headerless-plain.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
|     |     |
|-----|-----|
| a   | b   |
| c   | d   |
